[package]
name = "tokio-socketcan-isotp"
version = "0.2.0"
edition = "2021"
authors = ["Jakub Jíra <jakub.jira@protonmail.com>"]
license-file = "LICENCE"
description = "A asynchronous tokio ISO-TP library build on top of socketcan-isotp."
homepage = "https://github.com/japawBlob/tokio-socketcan-isotp"
repository = "https://github.com/japawBlob/tokio-socketcan-isotp"
readme = "README.md"
keywords = ["async","socketcan", "iso-tp", "isotp", "iso-15762-2"]
categories = ["network-programming", "os::linux-apis", "asynchronous"]

[badges]
maintenance = { status = "actively-developed"}

[dependencies]
futures = "0.3"
mio = { version = "0.8", features = ["os-ext"] }
libc = "0.2"
tokio = { version = "1", features = ["net"] }
bitflags = "2.4.1"
embedded-can = "0.4"
nix = "0.26"
thiserror = "1.0"
